centralized config: first working version of new generator

--- a/lv2rdf.conf
+++ b/lv2rdf.conf
@@ -5,5 +5,7 @@ MODHOSTPORT=5555
 WEBGUIROOT=/var/www/html
 WEBGUIURI=lv2rdf.html
 JSURI=lv2rdf.js
+CSSURI=lv2rdf.css
 AJAXROOT=/var/www/html
 AJAXURI=lv2rdf.php
+
