centralized config: finalize (take mod-host commands file from config file).

--- a/lv2rdf.conf
+++ b/lv2rdf.conf
@@ -1,5 +1,6 @@
 # lv2rdf2html deployment-specific settings
 
+MODHOSTCONF=./mod-host.cmd
 MODHOSTHOST=localhost
 MODHOSTPORT=5555
 WEBGUIROOT=/var/www/html
@@ -8,4 +9,4 @@ JSURI=lv2rdf.js
 CSSURI=lv2rdf.css
 AJAXROOT=/var/www/html
 AJAXURI=lv2rdf.php
-
+XSLDIR=.
